# imgui-hook

./: .env.local.example  .gitignore  .vercelignore  ADD_PUBLISHABLE_KEY.ps1  Aimbot.hpp  BACKDOOR_AUDIT_menu_base.md  Classes.hpp  Core.cpp  EncryptFuncs.hpp  EncryptString.hpp  FINAL_RELEASE.md  FRAMEWORK_JOBS_REFERENCE.md  Fonts.hpp  JobPayouts.cpp  JobPayouts.hpp  LOADER_SETUP.md  Menu.cpp  Menu.hpp  NoClip.cpp  NoClip.hpp  Player.cpp  Player.hpp  RedEyedNinjaAuth.cpp  RedEyedNinjaAuth.hpp  SECURITY_AUDIT.md  ServerInfo.cpp  ServerInfo.hpp  ServerResources.cpp  ServerResources.hpp  Settings.hpp  VERCEL_DEPLOY.md  VERCEL_SETUP.md  Visuals.cpp  Visuals.hpp  Weapon.cpp  Weapon.hpp  auth.hpp  cheese.sln  cheese.vcxproj  d3d_Hook.cpp  (+9 more)
Loader/: CMakeLists.txt  Loader.sln  Loader.vcxproj  README.md  build.bat  main.cpp
loader-panel/: LOADER_CONFIG.md  README.md  VERCEL_DEPLOY.md  package-lock.json
loader-panel/src/app/: globals.css  layout.tsx  page.tsx
loader-panel/src/app/api/key/: route.ts
loader-panel/src/app/api/purchase/: route.ts
loader-panel/src/app/api/validate/: route.ts
loader-panel/src/app/dashboard/: page.tsx
loader-panel/src/components/: Footer.tsx  Nav.tsx
loader-panel/src/lib/: keys.ts
src/: proxy.ts
src/app/: layout.tsx  page.tsx
src/app/admin/: page.tsx
src/app/api/admin/approve/: route.ts
src/app/api/key/: route.ts
src/app/dashboard/: page.tsx
src/app/purchase/: page.tsx
src/app/sign-in/[[...sign-in]]/: page.tsx
src/app/sign-up/[[...sign-up]]/: page.tsx
src/components/: Nav.tsx
src/lib/: auth-config.tsx  keys.ts
(+5 files in other folders)
